--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,8 +1,9 @@
 #footer {
     width: 100vw;
     height: 3vw;
-    background-color: black;
+    background-color: #0f1513;
     position:relative;
     bottom: 0;
     left: 0;
+    margin-top: 200px;
 }
