--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,6 +4,7 @@
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
     z-index: 100;
     position: relative;
+    background-color: #0f1513;
 }
 
 #title {
