--- a/src/app/pages/pokemon/pokemon.component.scss
+++ b/src/app/pages/pokemon/pokemon.component.scss
@@ -4,8 +4,57 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 20vw; 
-    width: 90vw;
+    height: 20vw;
+    width: 100vw;
     z-index: -1;
     position: relative;
+}
+
+#card_pokemon {
+    border-radius: 20px;
+    color: white;
+    background-color: #1A1A1A
+}
+
+.pokeball {
+    display: block;
+    width: 192px;
+    height: 192px;
+    background: radial-gradient(white 16px,
+            black 17px 18px,
+            white 19px 24px,
+            black 25px 32px,
+            transparent 33px),
+        linear-gradient(to bottom, red 0 80px, black 81px 96px, white 97px 100%);
+    border-radius: 50%;
+    border: 8px solid black;
+    box-shadow: inset -16px -8px 0 0 rgba(0, 0, 0, 0.2);
+    animation: shake 1s infinite cubic-bezier(0.36, 0.07, 0.19, 0.97);
+}
+
+/* Animation */
+@keyframes shake {
+    0% {
+        transform: translateX(0) rotate(0);
+    }
+
+    20% {
+        transform: translateX(-10px) rotate(-20deg);
+    }
+
+    30% {
+        transform: translateX(10px) rotate(20deg);
+    }
+
+    50% {
+        transform: translateX(-10px) rotate(-10deg);
+    }
+
+    60% {
+        transform: translateX(10px) rotate(10deg);
+    }
+
+    100% {
+        transform: translateX(0) rotate(0);
+    }
 }
